[tool.poetry]
name = "nautobot-saml-metadata"
version = "0.1.0"
description = "Nautobot plugin to generate SAML metadata"
authors = ["Chris Burger"]
packates = [
    { include = "saml_metadata" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"