[tool.poetry]
name = "nautobot-saml-metadata"
version = "0.1.1"
description = "Nautobot plugin to generate SAML metadata"
authors = ["Chris Burger"]
packages = [
    { include = "saml_metadata" }
]

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"